<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="340dp"
            android:layout_height="85dp"
            android:background="@drawable/box">

            <TextView
                android:id="@+id/tvTarihGdC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/ornek_ziyaret_gecmisi_20"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="10sp"
                tools:layout_editor_absoluteY="9dp" />

            <ImageView
                android:id="@+id/ivYerGdC"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:layout_editor_absoluteX="6dp"
                tools:layout_editor_absoluteY="6dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvYerKisaAciklemaGdC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/kisa_aciklama_bilgisi"
                android:textColor="@color/gray"
                android:textSize="10sp"
                tools:layout_editor_absoluteY="2dp" />

            <TextView
                android:id="@+id/tvYerKisaTanimGdC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/yer_kisa_tanim"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvYerAdiGdC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/yer_adi"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"
                tools:layout_editor_absoluteY="6dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>